--- a/index.html
+++ b/index.html
@@ -55,16 +55,31 @@
         <h1>What Are We Doing?</h1>
         <ul>
           <li>
-            <img src="images/img 1.jpg" alt="computer" width: 360px; height:
-            300px;/>
+            <img
+              src="images/img 1.jpg"
+              alt="computer"
+              width="360px"
+              ;
+              height="300px"
+            />
           </li>
           <li>
-            <img src="images/img 2.jpg" alt="tepephones" width: 360px; height:
-            300px;/>
+            <img
+              src="images/img 2.jpg"
+              alt="tepephones"
+              width="360px"
+              ;
+              height="300px"
+            />
           </li>
           <li>
-            <img src="images/img 3.jpg" alt="tepephone" width: 360px; height:
-            300px;/>
+            <img
+              src="images/img 3.jpg"
+              alt="tepephone"
+              width="360px"
+              ;
+              height="300px"
+            />
           </li>
         </ul>
       </section>
@@ -72,26 +87,46 @@
         <h1>Our Team</h1>
         <ul>
           <li>
-            <img src="images/img 4.jpg" alt="Mark Guerrero" width: 264px;
-            height: 260px;>
+            <img
+              src="images/img 4.jpg"
+              alt="Mark Guerrero"
+              width="264px"
+              ;
+              height="260px"
+            />
             <h4>Mark Guerrero</h4>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/img 5.jpg" alt="Tom Ford" width: 264px; height:
-            260px;>
+            <img
+              src="images/img 5.jpg"
+              alt="Tom Ford"
+              width="264px"
+              ;
+              height="260px"
+            />
             <h4>Tom Ford</h4>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/img 6.jpg" alt="Camila Garcia" width: 264px;
-            height: 260px;>
+            <img
+              src="images/img 6.jpg"
+              alt="Camila Garcia"
+              width="264px"
+              ;
+              height="260px"
+            />
             <h4>Camila Garcia</h4>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="images/img7.jpg" alt="Daniel Wilson" width: 264px; height:
-            260px;>
+            <img
+              src="images/img7.jpg"
+              alt="Daniel Wilson"
+              width="264px"
+              ;
+              height="260px"
+            />
             <h4>Daniel Wilson</h4>
             <p>UI Designer</p>
           </li>
