--- a/index.html
+++ b/index.html
@@ -6,33 +6,40 @@
     <title>Document</title>
   </head>
   <body>
-    <footer>
-      <h3>WEBSTUDIO</h3>
-      <p>Studio</p>
-      <p>Portfolio</p>
-      <p>Contacts</p>
-      <a href="info@devstudio.com" targer="_blank">info@devstudio.com</a>
-      <a href="+11 (000) 111-11-11" targer="_blank">+11 (000) 111-11-11</a>
-    </footer>
+    <header>
+      <a href="">WEBSTUDIO</a>
+      <nav>
+       <ul>  
+       <li><a href="">Studio</a></li>
+       <li><a hrer="">Portfolio</a></li>
+       <li><a hrer="">Contacts</a></li>
+       </ul>
+      </nav>
+      <abbress>
+      <a href="info@devstudio.com" targer="_blank">info@devstudio.com</a><br/>
+      <a href="+11 (000) 111-11-11" targer="_blank">+11 (000) 111-11-11</a><br/>
+      </adress>
+    </header>
     <main>
       <section>
-        <h1>Effective Solutions for Your Busines</h1>
-        <button>Order Service</button>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
       <section>
+        <h2></h2>
         <ul>
           <li>
             <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
-              perfect and creative solution
+              perfect and creative solution.
             </p>
           </li>
           <li>
             <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
-              within the shortest possible time
+              within the shortest possible time.
             </p>
           </li>
           <li>
@@ -52,11 +59,11 @@
         </ul>
       </section>
       <section>
-        <h1>What Are We Doing?</h1>
+        <h2>What are we doing?</h2>
         <ul>
           <li>
             <img
-              src="images/img 1.jpg"
+              src="./images/img 1.jpg"
               alt="computer"
               width="360px"
               ;
@@ -65,7 +72,7 @@
           </li>
           <li>
             <img
-              src="images/img 2.jpg"
+              src="./images/img 2.jpg"
               alt="tepephones"
               width="360px"
               ;
@@ -74,7 +81,7 @@
           </li>
           <li>
             <img
-              src="images/img 3.jpg"
+              src="./images/img 3.jpg"
               alt="tepephone"
               width="360px"
               ;
@@ -84,60 +91,59 @@
         </ul>
       </section>
       <section>
-        <h1>Our Team</h1>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
-              src="images/img 4.jpg"
+              src="./images/img 4.jpg"
               alt="Mark Guerrero"
               width="264px"
               ;
               height="260px"
             />
-            <h4>Mark Guerrero</h4>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img
-              src="images/img 5.jpg"
+              src="./images/img 5.jpg"
               alt="Tom Ford"
               width="264px"
               ;
               height="260px"
             />
-            <h4>Tom Ford</h4>
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="images/img 6.jpg"
+              src="./images/img 6.jpg"
               alt="Camila Garcia"
               width="264px"
               ;
               height="260px"
             />
-            <h4>Camila Garcia</h4>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="images/img7.jpg"
+              src="./images/img7.jpg"
               alt="Daniel Wilson"
               width="264px"
               ;
               height="260px"
             />
-            <h4>Daniel Wilson</h4>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <h3>WEBSTUDIO</h3>
+      <a href="">WEBSTUDIO</a>
       <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
+        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
       </p>
     </footer>
   </body>
