--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <nav>
        <ul>  
        <li><a href="">Studio</a></li>
-       <li><a hrer="">Portfolio</a></li>
-       <li><a hrer="">Contacts</a></li>
+       <li><a href="">Portfolio</a></li>
+       <li><a href="">Contacts</a></li>
        </ul>
       </nav>
       <abbress>
