--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
   </head>
   <body>
     <header>
-      <a href="">WEBSTUDIO</a>
       <nav>
+       <a href="./index.html">WebStudio</a>
        <ul>  
        <li><a href="">Studio</a></li>
        <li><a href="">Portfolio</a></li>
        <li><a href="">Contacts</a></li>
        </ul>
       </nav>
-      <abbress>
-      <a href="info@devstudio.com" targer="_blank">info@devstudio.com</a><br/>
-      <a href="+11 (000) 111-11-11" targer="_blank">+11 (000) 111-11-11</a><br/>
-      </adress>
+      <address>
+       <a href="mailto:info@devstudio.com" >info@devstudio.com</a><br/>
+       <a href="+110001111111">+11 (000) 111-11-11</a><br/>
+      </address>
     </header>
     <main>
       <section>
@@ -59,7 +59,7 @@
         </ul>
       </section>
       <section>
-        <h2>What are we doing?</h2>
+        <h2>What are we doing</h2>
         <ul>
           <li>
             <img
@@ -141,7 +141,7 @@
       </section>
     </main>
     <footer>
-      <a href="">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital marketing & growth solutions.
       </p>
