--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <address>
        <ul>
        <li><a href="mailto:info@devstudio.com" >info@devstudio.com</a><br/></li>
-       <li><a href="+110001111111">+11 (000) 111-11-11</a><br/></li>
+       <li><a href="tel:+110001111111">+11 (000) 111-11-11</a><br/></li>
        </ul>
       </address>
     </header>
@@ -67,27 +67,24 @@
             <img
               src="./images/img 1.jpg"
               alt="computer"
-              width="360px"
-              ;
-              height="300px"
+              width="360"
+              height="300"
             />
           </li>
           <li>
             <img
               src="./images/img 2.jpg"
               alt="tepephones"
-              width="360px"
-              ;
-              height="300px"
+              width="360"
+              height="300"
             />
           </li>
           <li>
             <img
               src="./images/img 3.jpg"
               alt="tepephone"
-              width="360px"
-              ;
-              height="300px"
+              width="360"
+              height="300"
             />
           </li>
         </ul>
@@ -99,9 +96,8 @@
             <img
               src="./images/img 4.jpg"
               alt="Mark Guerrero"
-              width="264px"
-              ;
-              height="260px"
+              width="264"
+              height="260"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
@@ -110,9 +106,8 @@
             <img
               src="./images/img 5.jpg"
               alt="Tom Ford"
-              width="264px"
-              ;
-              height="260px"
+              width="264"
+              height="260"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
@@ -121,9 +116,8 @@
             <img
               src="./images/img 6.jpg"
               alt="Camila Garcia"
-              width="264px"
-              ;
-              height="260px"
+              width="264"
+              height="260"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
@@ -132,9 +126,8 @@
             <img
               src="./images/img7.jpg"
               alt="Daniel Wilson"
-              width="264px"
-              ;
-              height="260px"
+              width="264"
+              height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
