--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       </nav>
       <address>
        <ul>
-       <li><a href="mailto:info@devstudio.com" >info@devstudio.com</a><br/></li>
-       <li><a href="tel:+110001111111">+11 (000) 111-11-11</a><br/></li>
+       <li><a href="mailto:info@devstudio.com" >info@devstudio.com</a><br /></li>
+       <li><a href="tel:+110001111111">+11 (000) 111-11-11</a><br /></li>
        </ul>
       </address>
     </header>
@@ -64,13 +64,13 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="./images/img 1.jpg" alt="computer" width="360" height="300"/>
+            <img src="./images/img1.jpg" alt="computer" width="360" height="300"/>
           </li>
           <li>
-            <img src="./images/img 2.jpg" alt="tepephones" width="360" height="300"/>
+            <img src="./images/img2.jpg" alt="tepephones" width="360" height="300"/>
           </li>
           <li>
-            <img src="./images/img 3.jpg" alt="tepephone" width="360" height="300"/>
+            <img src="./images/img3.jpg" alt="tepephone" width="360" height="300"/>
           </li>
         </ul>
       </section>
@@ -78,17 +78,17 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/img 4.jpg" alt="Mark Guerrero" width="264" height="260"/>
-            <h3>Mark Guerrero</h3>
+            <img src="./images/img4.jpg" alt="Mark Guerrero" width="264" height="260"/>
+            <h3>Mark Guerrero</h3>2
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img 5.jpg" alt="Tom Ford" width="264" height="260"/>
+            <img src="./images/img5.jpg" alt="Tom Ford" width="264" height="260"/>
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img 6.jpg" alt="Camila Garcia" width="264" height="260"/>
+            <img src="./images/img6.jpg" alt="Camila Garcia" width="264" height="260"/>
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
